# metadata-manager

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  test.txt
authentication-manager/src/: CMakeLists.txt  access_token.cpp  authentication.cpp
authentication-manager/src/common/: config.cpp  utilitys.cpp
authentication-manager/src/dao/postgresql/: db_session_manager.cpp
authentication-manager/src/provider/: authentiction_provider.cpp  provider_base.cpp
authentication-manager/test/v2.0/postgresql/: CMakeLists.txt
example/: CMakeLists.txt  main.cpp  oltp_receiver.cpp  worker.cpp  worker.h
metadata-manager/mock/: CMakeLists.txt  datatype_metadata.cpp  metadata.cpp  object_id.cpp  table_metadata.cpp
metadata-manager/src/: CMakeLists.txt  datatypes.cpp  metadata.cpp  object_id.cpp  roles.cpp  statistics.cpp  table_metadata.cpp  tables.cpp
metadata-manager/src/common/: config.cpp  utilitys.cpp
metadata-manager/src/dao/: columns_dao.cpp  datatypes_dao.cpp  db_session_manager.cpp  generic_dao.cpp  statistics_dao.cpp  tables_dao.cpp
metadata-manager/src/dao/common/: config.cpp  dbc_utils.cpp  utilitys.cpp
metadata-manager/src/dao/dialect/: dialect_strategy.cpp  postgresql_dialect.cpp
metadata-manager/src/dao/json/: columns_dao.cpp  datatypes_dao.cpp  db_session_manager.cpp  object_id.cpp  tables_dao.cpp
metadata-manager/src/dao/postgresql/: columns_dao.cpp  datatypes_dao.cpp  db_session_manager.cpp  dbc_utils.cpp  privileges_dao.cpp  roles_dao.cpp  statistics_dao.cpp  tables_dao.cpp
metadata-manager/src/helper/: table_metadata_helper.cpp
metadata-manager/src/provider/: datatypes_provider.cpp  provider_base.cpp  roles_provider.cpp  statistics_provider.cpp  tables_provider.cpp
metadata-manager/test/: CMakeLists.txt  table_test.cpp
metadata-manager/test/expected/: datatypes.json  diff.sh  oid  result.txt  rm_outputfile.sh  tables.json
metadata-manager/test/v2.0/: CMakeLists.txt  table_test.cpp
metadata-manager/test/v3.0/: CMakeLists.txt
metadata-manager/test/v3.0/src/: api_test_column_statistics.cpp  api_test_data_types.cpp  api_test_db_access_failure.cpp  api_test_environment.cpp  api_test_table_metadatas.cpp  api_test_table_metadatas_exception.cpp  api_test_table_metadatas_extra.cpp  api_test_table_statistics.cpp  global_test_environment.cpp  main.cpp
metadata-manager/test/v3.1/: CMakeLists.txt
metadata-manager/test/v3.1/json/: table_test.cpp
src/: CMakeLists.txt  column.cpp  constraint.cpp  constraints.cpp  datatype.cpp  datatypes.cpp  index.cpp  indexes.cpp  metadata.cpp  metadata_factory.cpp  role.cpp  roles.cpp  statistic.cpp  statistics.cpp  table.cpp  tables.cpp
src/common/: config.cpp  token.cpp  utility.cpp
src/dao/: db_session_manager.cpp
src/dao/json/: columns_dao_json.cpp  constraints_dao_json.cpp  dao_json.cpp  datatypes_dao_json.cpp  db_session_manager.cpp  db_session_manager_json.cpp  index_dao_json.cpp  object_id.cpp  object_id_json.cpp  tables_dao.cpp  tables_dao_json.cpp
src/dao/postgresql/: columns_dao.cpp  columns_dao_pg.cpp  constraints_dao_pg.cpp  dao_pg.cpp  datatypes_dao.cpp  datatypes_dao_pg.cpp  db_session_manager.cpp  db_session_manager_pg.cpp  dbc_utils.cpp  dbc_utils_pg.cpp  index_dao_pg.cpp  privileges_dao.cpp  privileges_dao_pg.cpp  roles_dao.cpp  roles_dao_pg.cpp  statistics_dao.cpp  statistics_dao_pg.cpp  tables_dao.cpp  tables_dao_pg.cpp
src/helper/: logging_helper.cpp  ptree_helper.cpp  table_metadata_helper.cpp
src/log/: default_logger.cpp  log_controller.cpp  logging.cpp
src/provider/: constraints_provider.cpp  datatypes_provider.cpp  indexes_provider.cpp  metadata_provider.cpp  provider.cpp  provider_base.cpp  provider_factory.cpp  roles_provider.cpp  statistics_provider.cpp  tables_provider.cpp
test/extended/json/: CMakeLists.txt  table_test.cpp
test/json/: CMakeLists.txt
test/json/src/: api_test_column_statistics.cpp  api_test_constraint_metadata.cpp  api_test_foreign_table_privilege.cpp  api_test_index_metadata.cpp  api_test_roles.cpp  api_test_table_metadata.cpp  api_test_table_metadata_exception.cpp  api_test_table_metadata_extra.cpp  api_test_table_metadatas.cpp  api_test_table_metadatas_exception.cpp  api_test_table_metadatas_extra.cpp
test/postgresql/: CMakeLists.txt
test/postgresql/src/: api_test_column_statistics.cpp  api_test_constraint_metadata.cpp  api_test_db_access_failure.cpp  api_test_foreign_table_privilege.cpp  api_test_index_metadata.cpp  api_test_roles.cpp  api_test_roles_exception.cpp  api_test_table_metadata.cpp  api_test_table_metadata_exception.cpp  api_test_table_metadata_extra.cpp  api_test_table_statistics.cpp  global_test_environment.cpp  main.cpp
test/postgresql_extended/: CMakeLists.txt  roles_test.cpp  tables_test.cpp
test/src/: CMakeLists.txt  main.cpp
test/src/common/: global_test_environment.cpp  ut_utils.cpp
test/src/helper/: api_test_helper.cpp  column_statistics_helper.cpp  constraint_metadata_helper.cpp  data_types_helper.cpp  index_metadata_helper.cpp  table_metadata_helper.cpp  token_helper.cpp
test/src/json/: api_test_column_statistics.cpp  api_test_constraint_metadata.cpp  api_test_data_types.cpp  api_test_foreign_table_privilege.cpp  api_test_index_metadata.cpp  api_test_roles.cpp  api_test_table_metadata.cpp  api_test_table_metadata_exception.cpp  api_test_table_metadata_extra.cpp  global_test_environment.cpp  main.cpp
test/src/matadata/: ut_column_statistics.cpp  ut_constraint_metadata.cpp  ut_datattypes_metadata.cpp  ut_index_metadata.cpp  ut_role_metadata.cpp  ut_table_metadata.cpp
test/src/postgresql/: api_test_column_statistics.cpp  api_test_constraint_metadata.cpp  api_test_data_types.cpp  api_test_db_access_failure.cpp  api_test_foreign_table_privilege.cpp  api_test_index_metadata.cpp  api_test_roles.cpp  api_test_roles_exception.cpp  api_test_table_metadata.cpp  api_test_table_metadata_exception.cpp  api_test_table_metadata_extra.cpp  api_test_table_statistics.cpp  global_test_environment.cpp  main.cpp
test/src/test/: invalid_key_test.cpp  scenario_test.cpp  utility_test.cpp
(+1764 files in other folders)
